Stopped file entries wrappingin terminal view

--- a/css/site.css
+++ b/css/site.css
@@ -80,6 +80,7 @@ a {
 .file {
     margin-right: 20px;
     padding-right: 20px;
+    white-space: nowrap;
 }
 
 .content {
